Improved menu styling and fixed home screen on mobile

--- a/frontend/src/app/features/home/home.component.scss
+++ b/frontend/src/app/features/home/home.component.scss
@@ -6,7 +6,6 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   padding: 1rem;
-  height: 450px;
   align-items: center;
 }
 
